--- a/frontend/public/pvz-test.html
+++ b/frontend/public/pvz-test.html
@@ -7,49 +7,134 @@
     <style>
       body { font-family: Arial, sans-serif; margin: 0; }
       .toolbar { padding: 12px; border-bottom: 1px solid #ddd; display: flex; gap: 8px; align-items: center; }
-      #widget { width: 1200px; max-width: 100%; height: 780px; margin: 12px auto; border: 1px solid #ddd; }
+      #widget {
+        width: 1200px;
+        max-width: calc(100vw - 24px);
+        height: 780px;
+        margin: 12px auto;
+        border: 1px solid #ddd;
+        background: #fff;
+      }
       #log { margin: 12px; padding: 8px; background: #f6f7fb; min-height: 48px; white-space: pre-wrap; }
+      button { padding: 8px 10px; }
     </style>
+
+    <!-- ВАЖНО: пусть будет async, но мы будем ждать события загрузки -->
     <script src="https://ndd-widget.landpro.site/widget.js" async></script>
   </head>
   <body>
     <div class="toolbar">
       <button id="create">Create widget</button>
       <button id="update">Update params</button>
+      <span id="status">loading…</span>
     </div>
+
     <div id="widget"></div>
     <pre id="log"></pre>
+
     <script>
       const log = document.getElementById('log');
+      const status = document.getElementById('status');
       const write = (v) => (log.textContent = `${new Date().toISOString()}\n${v}`);
 
-      const params = {
-        city: 'Москва',
-        size: { width: '1200px', height: '780px' },
-        show_select_button: true,
-        filter: { type: ['pickup_point', 'terminal'] }
+      const getSizePx = () => {
+        const el = document.getElementById('widget');
+        const r = el.getBoundingClientRect();
+        return { w: Math.round(r.width), h: Math.round(r.height) };
       };
 
-      document.getElementById('create').addEventListener('click', () => {
-        if (!window.YaDelivery?.createWidget) {
-          write('YaDelivery is not loaded');
-          console.error('YaDelivery is not loaded');
+      const waitForYaDelivery = (timeoutMs = 8000) =>
+        new Promise((resolve, reject) => {
+          const start = Date.now();
+          const tick = () => {
+            if (window.YaDelivery?.createWidget) return resolve(true);
+            if (Date.now() - start > timeoutMs) return reject(new Error('YaDelivery not loaded'));
+            requestAnimationFrame(tick);
+          };
+          tick();
+        });
+
+      const waitForStableSize = (minW = 900, minH = 520, timeoutMs = 5000) =>
+        new Promise((resolve, reject) => {
+          const start = Date.now();
+          const tick = () => {
+            const { w, h } = getSizePx();
+            if (w >= minW && h >= minH) return resolve({ w, h });
+            if (Date.now() - start > timeoutMs) return reject(new Error(`Bad size: ${w}x${h}`));
+            requestAnimationFrame(tick);
+          };
+          // два кадра, чтобы layout успел
+          requestAnimationFrame(() => requestAnimationFrame(tick));
+        });
+
+      const buildParams = () => {
+        const { w, h } = getSizePx();
+        return {
+          city: 'Москва',
+          // ВАЖНО: пиксели строкой
+          size: { width: `${w}px`, height: `${h}px` },
+          show_select_button: true,
+          filter: {
+            type: ['pickup_point', 'terminal'],
+            is_yandex_branded: false,
+            payment_methods: ['already_paid', 'card_on_receipt'],
+            payment_methods_filter: 'or'
+          }
+        };
+      };
+
+      let created = false;
+
+      async function createWidgetSafe() {
+        try {
+          status.textContent = 'waiting YaDelivery…';
+          await waitForYaDelivery();
+
+          status.textContent = 'waiting size…';
+          await waitForStableSize(900, 520);
+
+          const el = document.getElementById('widget');
+          el.innerHTML = '';
+
+          const params = buildParams();
+          window.YaDelivery.createWidget({ containerId: 'widget', params });
+          created = true;
+
+          status.textContent = 'created ✅';
+          write('Widget created with params:\n' + JSON.stringify(params, null, 2));
+        } catch (e) {
+          status.textContent = 'error ❌';
+          write(String(e?.message || e));
+          console.error(e);
+        }
+      }
+
+      function updateWidget() {
+        if (!created || !window.YaDelivery?.setParams) {
+          write('Widget not created OR setParams not available');
           return;
         }
+        const params = buildParams();
+        window.YaDelivery.setParams(params);
+        write('Widget params updated:\n' + JSON.stringify(params, null, 2));
+      }
 
-        window.YaDelivery.createWidget({ containerId: 'widget', params });
-        write('Widget created');
-      });
-
-      document.getElementById('update').addEventListener('click', () => {
-        window.YaDelivery?.setParams?.(params);
-        window.dispatchEvent(new Event('resize'));
-        write('Widget params updated');
-      });
+      document.getElementById('create').addEventListener('click', createWidgetSafe);
+      document.getElementById('update').addEventListener('click', updateWidget);
 
       document.addEventListener('YaNddWidgetPointSelected', (event) => {
         write(`Selected:\n${JSON.stringify(event.detail, null, 2)}`);
       });
+
+      // Авто-статус
+      (async () => {
+        try {
+          await waitForYaDelivery();
+          status.textContent = 'ready to create';
+        } catch {
+          status.textContent = 'YaDelivery not loaded';
+        }
+      })();
     </script>
   </body>
 </html>
